# dtw-cpp

./: .clang-tidy  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  headers_defines_file  main.py  pyproject.toml  setup.py  test.py  test_clusteringmedoids_rep_0.csv  test_clusteringmedoids_rep_1.csv  test_clusteringmedoids_rep_2.csv
.claude/: CITATIONS.md  CLAUDE.md  LESSONS.md  MISSING.md  PLAN_lemire_envelope.md  READ.md  TODO.md  UNIMODULAR.md  cpp-style.md  design.md  openmp-crashcourse.md  python-style.md  ralph-loop.local.md  settings.json  settings.local.json
.github/: dependabot.yml  (+1 more)
benchmarks/: CMakeLists.txt  README.md  UCR_dtwc.cpp  aggregate_results.py  bench_cross_language.m  bench_cross_language.py  bench_cross_library.py  bench_cuda_dtw.cpp  bench_cuda_python.py  bench_dtw_baseline.cpp  bench_f32_vs_f64.cpp  bench_metal_dtw.cpp  bench_mmap_access.cpp  bench_mpi_dtw.cpp  bench_parquet_access.py  bench_scaling.py  gen_latex.py  mac_metal_benchmarks.md  plot_benchmarks.py  pyproject.toml  ucr_benchmark_results.json  ucr_benchmark_results.md  ucr_benchmark_results.tex  verify_results.py
benchmarks/results/: baseline_20260328_173431.json  baseline_head_20260403.json  baseline_phase0_after.json  baseline_phase0_before.json  bench_39c4913.json  bench_hpc_fixes.json  bench_subphase_a.json  cross_library_20260329_154928.json  cross_library_20260329_155136.json  phase1_baseline.json  phase2_after.json  phase6_after.json  simd_after.json  simd_comparison.json  variant_alloc_baseline_20260403_after.json  variant_alloc_baseline_20260403_before.json
benchmarks/results/_autorun/: bench_dtw_baseline_20260412_221116.json  bench_metal_dtw_20260412_212302.json
benchmarks/results/mac_m2max/: metal_banded_row_20260412.json  metal_vs_cpu.json  pin_T12_close-cores.json  pin_T12_default.json  pin_T12_spread-cores.json  pin_T8_close.json  sweep_T1.json  sweep_T10.json  sweep_T12.json  sweep_T2.json  sweep_T4.json  sweep_T6.json  sweep_T8.json
bindings/matlab/: CMakeLists.txt  dtwc_mex.cpp  test_mex.m
bindings/matlab/+dtwc/: DTWClustering.m  Problem.m  adjusted_rand_index.m  adtw_distance.m  build_dendrogram.m  calinski_harabasz_index.m  check_system.m  clarans.m  compute_distance_matrix.m  cut_dendrogram.m  davies_bouldin_index.m  ddtw_distance.m  derivative_transform.m  dtw_arow_distance.m  dtw_distance.m  dtw_distance_missing.m  dunn_index.m  fast_clara.m  fast_pam.m  inertia.m  normalized_mutual_information.m  silhouette.m  soft_dtw_distance.m  soft_dtw_gradient.m  wdtw_distance.m  z_normalize.m
bindings/matlab/+dtwc/+distance/: adtw.m  arow.m  ddtw.m  dtw.m  missing.m  soft_dtw.m  standard.m  wdtw.m
bindings/matlab/examples/: example_quickstart.m
dtwc/: CMakeLists.txt  Clusters.hpp  Data.hpp  DataLoader.hpp  Problem.cpp  Problem.hpp  Problem_IO.cpp  Range.hpp  checkpoint.cpp  checkpoint.hpp  dataTypes.hpp  distance.hpp  dtwc.hpp  dtwc_cl.cpp  dtwc_cl.hpp  examples.hpp  fileOperations.hpp  initialisation.cpp  initialisation.hpp  main.cpp  mip.cpp  mip.hpp  mip_Gurobi.cpp  missing_utils.hpp  parallelisation.hpp  scores.cpp  scores.hpp  settings.hpp  soft_dtw.hpp  time_warping.hpp  timing.hpp  unitTests.hpp  utility.hpp  utility_deprecated.hpp  warping.hpp  warping_adtw.hpp  warping_ddtw.hpp  warping_missing.hpp  warping_missing_arow.hpp  warping_wdtw.hpp
dtwc/algorithms/: clarans.cpp  clarans.hpp  fast_clara.cpp  fast_clara.hpp  fast_pam.cpp  fast_pam.hpp  hierarchical.cpp  hierarchical.hpp
dtwc/algorithms/detail/: medoid_utils.hpp
dtwc/core/: clustering_result.hpp  crc32.hpp  distance_matrix.hpp  distance_metric.hpp  dtw.cpp  dtw.hpp  dtw_cost.hpp  dtw_dispatch.cpp  dtw_dispatch.hpp  dtw_kernel.hpp  dtw_options.hpp  gpu_dtw_common.hpp  lower_bound_impl.hpp  lower_bounds.hpp  matrix_io.hpp  mmap_data_store.hpp  mmap_distance_matrix.hpp  pruned_distance_matrix.cpp  pruned_distance_matrix.hpp  scratch_matrix.hpp  storage.hpp  time_series.hpp  z_normalize.hpp
dtwc/cuda/: cuda_dtw.cu  cuda_dtw.cuh  cuda_memory.cuh  gpu_config.cuh
dtwc/enums/: Init.hpp  KernelOverride.hpp  LowerBoundStrategy.hpp  Method.hpp  Solver.hpp  enums.hpp
dtwc/io/: arrow_ipc_reader.hpp  parquet_chunk_reader.hpp  parquet_reader.hpp
dtwc/metal/: metal_dtw.hpp  metal_dtw.mm
dtwc/mip/: CMakeLists.txt  benders.cpp  benders.hpp  mip.hpp  mip_Gurobi.cpp  mip_Highs.cpp
dtwc/mpi/: mpi_distance_matrix.cpp  mpi_distance_matrix.hpp
dtwc/simd/: highway_targets.hpp  lb_keogh_simd.cpp  multi_pair_dtw.cpp  multi_pair_dtw.hpp  z_normalize_simd.cpp
dtwc/solver/: CMakeLists.txt  ConstraintOperator.hpp  EqualityConstraints.hpp  LP.hpp  Simplex.cpp  Simplex.hpp  SimplexFlatRowTable.cpp  SimplexFlatRowTable.hpp  SimplexFlatTable.cpp  SimplexFlatTable.hpp  SimplexRowTable.cpp  SimplexRowTable.hpp  SimplexTable.cpp  SimplexTable.hpp  SparseMatrix.hpp  SparseSimplex.cpp  SparseSimplex.hpp  cg.hpp  solver_util.hpp  sparse_util.hpp  test.hpp
dtwc/types/: BandMatrix.hpp  Index.hpp  Range.hpp  SkewedBandMatrix.hpp  VecMatrix.hpp  element_types.hpp  types.hpp  types_util.hpp
examples/: CMakeLists.txt  Kmeans_single.cpp  Kmedoids_single.cpp  MIP_multiple.cpp  MIP_single.cpp  config.toml  config.yaml  example_new_features.cpp
examples/cpp/: CMakeLists.txt  Kmedoids_single.cpp  MIP_multiple.cpp  MIP_single.cpp  config.toml  config.yaml  example_new_features.cpp
examples/cpp/example_project/: CMakeLists.txt  main.cpp
examples/example_project/: main.cpp
examples/matlab/: example_quickstart.m
examples/python/: 01_quickstart.py  02_dtw_variants.py  03_clustering_evaluation.py  04_missing_data.py  05_fast_clara.py  06_distance_matrix.py  08_parquet_io.py
python/: .gitignore  CMakeLists.txt  cppyy-test.py  dtwcpy.cpp  py_main.cpp  pybind11-test.py
python/dtwcpp/: __init__.py  _clustering.py  convert.py  distance.py  io.py
python/examples/: 01_quickstart.py  02_dtw_variants.py  03_clustering_evaluation.py  04_missing_data.py  05_fast_clara.py  06_distance_matrix.py  07_checkpoint.py
python/src/: _dtwcpp_core.cpp
(+321 files in other folders)
