[build-system]
requires = ["setuptools", "cmake>=3.21", "pybind11>=2.11", "wheel", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "dtwcpp"
version = "1.0.0"
description = "DTWC++ — Fast Dynamic Time Warping and Clustering"
authors = [
    { name = "Volkan Kumtepeli", email = "volkan.kumtepeli@gmail.com" },
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
test = ["pytest>=6.0"]
