[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0", "cmake>=3.21", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "dtwcpp"
version = "1.0.0"
description = "DTWC++ — Fast Dynamic Time Warping and Clustering"
authors = [
    { name = "Volkan Kumtepeli", email = "volkan.kumtepeli@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
test = ["pytest>=6.0"]
sklearn = ["scikit-learn>=1.0"]
hdf5 = ["h5py>=3.0"]
parquet = ["pyarrow>=12.0"]
io = ["h5py>=3.0", "pyarrow>=12.0"]

[tool.scikit-build]
cmake.args = ["-DDTWC_BUILD_PYTHON=ON", "-DDTWC_ENABLE_GUROBI=OFF", "-DDTWC_ENABLE_HIGHS=OFF"]
wheel.packages = ["python/dtwcpp"]
build-dir = "build_python/{wheel_tag}"
